# customer-support-chatbot

./: .gitignore  Dockerfile  Dockerfile.k8s  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci-cd.yml
dags/: ml_pipeline.py
data/: .gitignore  models.dvc  processed.dvc
data/models/checkpoints/: README.md
data/models/checkpoints/checkpoint-125/: adapter_config.json  scheduler.pt  trainer_state.json
data/processed/: test.json  val.json
data/results/: training_results.json
docker/: docker-compose.airflow.yml
k8s/: deployment.yaml
mlruns/0/: meta.yaml
mlruns/130467928076566210/: meta.yaml
mlruns/130467928076566210/7f5ff2f499b5485dba202ee5a89442ee/: meta.yaml
mlruns/130467928076566210/7f5ff2f499b5485dba202ee5a89442ee/metrics/: final_loss  loss  train_samples  (+1 more)
models/: MODEL_CARD.md
models/customer-support-model/: README.md
models/customer-support-model/checkpoint-1500/: trainer_state.json
models/customer-support-model/checkpoint-1512/: adapter_config.json  trainer_state.json
monitoring/: docker-compose.yml  prometheus.yml
notebooks/: 01_data_exploration.ipynb  02_fine_tuning.ipynb  03_colab_fine_tuning.ipynb
src/api/: app.py
src/config/: logging_config.py  settings.py
src/evaluation/: metrics.py  tracking.py
src/model/: inference.py
src/training/: train.py
tests/: conftest.py  test_api.py  test_api_extended.py  test_config.py  test_inference.py  test_inference_extended.py  test_logging.py  test_metrics.py  test_metrics_extended.py  test_tracking.py
(+3 files in other folders)
