[project]
name = "customer-support-chatbot"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "accelerate>=0.25.0",
    "datasets>=2.16.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "mlflow>=2.10.0",
    "dvc>=3.50.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]